Current issue is that on reload at halfway point between about and contact me sections, the page content shifts left and causes overflow. Suspect issue is in function initial scroll in js class PageAnimation

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -28,7 +28,7 @@ body{
     margin: 0px;
     padding: 0px;
     overflow-y:scroll;
-    overflow-x: hidden;
+    
 }
 
 button{
@@ -262,7 +262,7 @@ a:visited{
 
 .portfolio-section{
     position: relative;
-    width: 100vw !important;
+    width: 100% !important;
     max-width: 100%;
     height: 60vh;
     color: #fff;
@@ -408,7 +408,7 @@ a:visited{
 }
 
 .about-me-section{
-    width: 100vw !important;
+    width: 100% !important;
     max-width: 100%; 
     height: 50vh;
     display: flex;
@@ -465,9 +465,9 @@ a:visited{
 
 .contact-me{
     position: relative;
-    width: 100vw !important;
+    width: 100% !important;
     max-width: 100%;
-    height: fit-content;
+    height: 90vh;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
